--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title><%= htmlWebpackPlugin.options.title %></title>
 </head>
 <body>
+  <div id="modal-root"></div>
   <div id="app"></div>
 </body>
 </html>
