--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title><%= htmlWebpackPlugin.options.title %></title>
 </head>
 <body>
+  <script type="text/javascript" src="https://appleid.cdn-apple.com/appleauth/static/jsapi/appleid/1/en_US/appleid.auth.js"></script>
   <div id="app"></div>
 </body>
 </html>
